grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: grafana.MINIKUBE_IP.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: loki-grafana
              servicePort: 3000
