keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: keycloak.MINIKUBE_IP.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: keycloak
              servicePort: 80
